[package]
name = "milhouse"
version = "0.1.0"
description = "Persistent binary merkle tree"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sigp/milhouse"
documentation = "https://docs.rs/milhouse"
keywords = ["ethereum", "functional"]
categories = ["data-structures", "cryptography::cryptocurrencies", ]

[dependencies]
alloy-primitives = { version = "0.7.7", features =["arbitrary"] }
derivative = "2.2.0"
ethereum_hashing = "0.6.0"
ethereum_ssz = { git = "https://github.com/sigp/ethereum_ssz", branch = "alloy" }
ethereum_ssz_derive = { git = "https://github.com/sigp/ethereum_ssz", branch = "alloy" }
itertools = "0.10.3"
parking_lot = "0.12.1"
rayon = "1.5.1"
serde = { version = "1.0.0", features = ["derive"] }
tree_hash = { git = "https://github.com/eserilev/tree_hash", branch = "alloy-deps"}
triomphe = "0.1.5"
typenum = "1.14.0"
vec_map = "0.8.2"
smallvec = "1.8.0"
arbitrary = { version = "1.2.3", features = ["derive"] }


[dev-dependencies]
ssz_types = { git = "https://github.com/eserilev/ssz_types", branch = "alloy-tweaks" }
proptest = "1.0.0"
tree_hash_derive = { git = "https://github.com/eserilev/tree_hash", branch = "alloy-deps"}
criterion = "0.5"

[features]
debug = []

[[bench]]
name = "rebase"
harness = false

[[bench]]
name = "tree_hash_root"
harness = false

[[bench]]
name = "ssz"
harness = false

[[bench]]
name = "pop_front"
harness = false
