[package]
name = "milhouse"
version = "0.6.0"
description = "Persistent binary merkle tree"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sigp/milhouse"
documentation = "https://docs.rs/milhouse"
keywords = ["ethereum", "functional"]
categories = ["data-structures", "cryptography::cryptocurrencies"]

[dependencies]
educe = "0.6.0"
ethereum_hashing = "0.7.0"
ethereum_ssz = "0.9"
ethereum_ssz_derive = "0.9"
itertools = "0.13.0"
parking_lot = "0.12.1"
rayon = "1.5.1"
serde = { version = "1.0.0", features = ["derive"] }
tree_hash = "0.10"
triomphe = "0.1.5"
typenum = "1.14.0"
vec_map = "0.8.2"
smallvec = "1.8.0"
arbitrary = { version = "1.2.3", features = ["derive"], optional = true }
alloy-primitives = { version = "1.0.0" }


[dev-dependencies]
ssz_types = "0.11"
proptest = "1.0.0"
tree_hash_derive = "0.10"
criterion = "0.5"
serde_json = "1.0.0"

[features]
default = []
arbitrary = ["dep:arbitrary", "alloy-primitives/arbitrary"]
debug = []

[[bench]]
name = "rebase"
harness = false

[[bench]]
name = "tree_hash_root"
harness = false

[[bench]]
name = "ssz"
harness = false

[[bench]]
name = "pop_front"
harness = false
